--- a/assignment1.html
+++ b/assignment1.html
@@ -16,7 +16,7 @@
              const loadingDiv = document.getElementById('loading');
               loadingDiv.style.display = 'block';
             fetch('https://api.spacexdata.com/v4/launches/latest')
-            .then(function sucess(response){
+            .then(function success(response){
                 return response.json();
             })
 
@@ -40,4 +40,5 @@
     </script>
     </body>
     </html>
+
   
